--- a/ExchangeRates/ExchangeRates.Droid/Resources/layout/FirstView.axml
+++ b/ExchangeRates/ExchangeRates.Droid/Resources/layout/FirstView.axml
@@ -21,16 +21,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-      <EditText
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textSize="40dp"
-          local:MvxBind="Text Hello" />
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textSize="40dp"
-          local:MvxBind="Text Hello" />
+		<Mvx.MvxListView
+        android:id="@+id/lvMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+		local:MvxItemTemplate="@layout/main_list_item"
+		local:MvxBind="ItemsSource Currencies">
+    </Mvx.MvxListView>
     </LinearLayout>
   </FrameLayout>
 </RelativeLayout>
