--- a/ExchangeRates/ExchangeRates.Droid/Resources/layout/FirstView.axml
+++ b/ExchangeRates/ExchangeRates.Droid/Resources/layout/FirstView.axml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 		local:MvxItemTemplate="@layout/main_list_item"
-		local:MvxBind="ItemsSource Currencies">
+		local:MvxBind="ItemsSource Currencies; ItemClick ItemSelectedCommand">
     </Mvx.MvxListView>
     </LinearLayout>
   </FrameLayout>
