--- a/ExchangeRates/ExchangeRates.Droid/Resources/layout/BankBranchesView.axml
+++ b/ExchangeRates/ExchangeRates.Droid/Resources/layout/BankBranchesView.axml
@@ -22,7 +22,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-		
+			<EditText
+		android:id="@+id/Code"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		local:MvxBind="Text City"
+		android:textSize="25dp">
+			</EditText>
 
 
 		<Mvx.MvxListView
